maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:16: error: ':' expected but ';' found.
def Coord_voisins(x ;y):Array[Int,Int] = {
                    ^JediEscaper:16: error: ';' expected but ')' found.
def Coord_voisins(x ;y):Array[Int,Int] = {
                      ^